--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="empty">@android:color/transparent</color>
+    <color name="progress">#F2912C</color>
+    <color name="progress_disable">@android:color/darker_gray</color>
+    <color name="progress_click">#F2912C</color>
+    <color name="pin_background">#E2335E</color>
+    <color name="pin_text">#ffffff</color>
+    <color name="bar_title_color">@android:color/black</color>
+    <color name="bar_title_selected_color">#FFFFFF</color>
+    <color name="bpm_seekbar_color">@android:color/darker_gray</color>
+
 </resources>
