--- a/app/src/main/res/layout/activity_aed.xml
+++ b/app/src/main/res/layout/activity_aed.xml
@@ -14,21 +14,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Search AED Location" />
+
+    <!--    <ScrollView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="100dp">-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/textView"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:textSize="13sp"-->
+    <!--            android:textStyle="bold" />-->
+
+    <!--    </ScrollView>-->
+
     <LinearLayout
         android:orientation="vertical"
         android:id="@+id/location_layout"
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="150dp">
         </ListView>
-
-
         <ScrollView
             android:layout_marginTop="25dp"
             android:layout_width="match_parent"
@@ -40,77 +50,88 @@
 
                 <fragment
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="270dp"
                     android:id="@+id/map"
                     android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
                 <LinearLayout
                     android:layout_marginTop="10dp"
                     android:visibility="invisible"
-                    android:background="@android:color/holo_orange_dark"
+                    android:background="@drawable/aed_tab"
                     android:id="@+id/select_linear_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:padding="2dp"
+                    android:layout_height="130dp"
+                    android:padding="10dp"
                     android:gravity="center_vertical"
                     android:orientation="vertical">
 
                     <TextView
+                        android:layout_marginTop="5dp"
                         android:id="@+id/buildAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:text="buildAddress"
-                        android:textColor="@android:color/white"
+                        android:textColor="@android:color/black"
                         android:textSize="15dp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:layout_marginTop="3dp"
+                        android:layout_marginTop="15dp"
                         android:id="@+id/buildPlace"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="3"
-                        android:textColor="@android:color/white"
+                        android:textColor="@android:color/black"
                         android:text="buildPlace"
-                        android:textSize="12dp" />
-
-                    <TextView
-                        android:id="@+id/distance"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:maxLines="3"
-                        android:textColor="@android:color/white"
-                        android:text="distance"
                         android:textSize="15dp" />
 
 
                     <LinearLayout
+                        android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/blogger_name"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:text="Clerk Tel"
-                            android:textColor="@android:color/white"
-                            android:textSize="12dp" />
+                            android:text="거리 : "
+                            android:textColor="@android:color/black"
+                            android:textSize="15dp" />
 
                         <TextView
-                            android:id="@+id/textView6"
-                            android:textColor="@android:color/white"
+                            android:id="@+id/distance"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:maxLines="3"
+                            android:textColor="@android:color/black"
+                            android:text="distance"
+                            android:textSize="15dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_marginTop="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_marginLeft="10dp"
-                            android:text="-" />
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="전화번호 :"
+                            android:textColor="@android:color/black"
+                            android:textSize="15dp" />
 
                         <TextView
                             android:id="@+id/clerkTel"
@@ -119,9 +140,9 @@
                             android:layout_marginLeft="10dp"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:textColor="@android:color/white"
+                            android:textColor="@android:color/black"
                             android:text="clerkTel"
-                            android:textColorLink="@android:color/white"
+                            android:textColorLink="#0000FF"
                             android:autoLink="phone"
                             android:textStyle="bold"
                             android:textSize="15dp" />
@@ -138,5 +159,45 @@
         </ScrollView>
 
     </LinearLayout>
+
+
+    <!--    <ScrollView-->
+    <!--        android:id="@+id/scrollView"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent">-->
+
+    <!--        <LinearLayout-->
+    <!--            android:id="@+id/location_layout"-->
+    <!--            android:orientation="vertical"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:visibility="invisible" >-->
+
+    <!--            <ListView-->
+    <!--                android:id="@+id/listView"-->
+    <!--                android:visibility="visible"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="200dp">-->
+    <!--            </ListView>-->
+
+    <!--            <fragment-->
+    <!--                android:layout_marginTop="30dp"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="300dp"-->
+    <!--                android:id="@+id/map"-->
+    <!--                android:name="com.google.android.gms.maps.SupportMapFragment"/>-->
+
+    <!--            <TextView-->
+    <!--                android:layout_marginTop="30dp"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="100dp"-->
+    <!--                android:visibility="invisible"-->
+    <!--                android:id="@+id/selected_item_textview"-->
+    <!--                android:background="@android:color/holo_blue_light"-->
+    <!--                android:text="아래 목록에서 선택하세요!"/>-->
+
+    <!--        </LinearLayout>-->
+
+    <!--    </ScrollView>-->
 
 </LinearLayout>
