--- a/app/src/main/res/layout/data_check.xml
+++ b/app/src/main/res/layout/data_check.xml
@@ -201,6 +201,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
         android:layout_marginBottom="16dp"
+        android:onClick="clickPredict"
         android:text="예측하기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -210,7 +211,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:onClick="btnChange"
+        android:onClick="clickChange"
         android:text="수정하기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
