--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="empty">@android:color/transparent</color>
-    <color name="progress">#F2912C</color>
+    <color name="progress_bar">#F2912C</color>
     <color name="progress_disable">@android:color/darker_gray</color>
     <color name="progress_click">#F2912C</color>
     <color name="pin_background">#E2335E</color>
@@ -14,4 +14,8 @@
     <color name="bar_title_selected_color">#FFFFFF</color>
     <color name="bpm_seekbar_color">@android:color/darker_gray</color>
 
+    <color name="colorGraph">#DF013A</color>
+    <color name="colorButtonInside">#ffffff</color>
+    <color name="colorButtonLine">#DF013A</color>
+    <color name="colorGraph2">@android:color/black</color>
 </resources>
