update heart graph layout

--- a/app/src/main/res/layout/activity_heart_graph.xml
+++ b/app/src/main/res/layout/activity_heart_graph.xml
@@ -1,161 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:orientation="vertical"
+    android:padding="15dp"
     tools:context=".HeartGraphActivity">
 
-    <LinearLayout
-        android:padding="10dp"
+    <RelativeLayout
+        android:layout_marginTop="10dp"
+        android:background="@drawable/current_tab"
+        android:id="@+id/current_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="60dp">
         <LinearLayout
-            android:background="@drawable/icon_tab"
-            android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:padding="10dp">
+            android:orientation="horizontal"
+            android:layout_width="350dp"
+            android:layout_height="match_parent">
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="90dp">
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="260dp"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/dateText"
-                        android:text="2019 - 10- 08"
-                        android:textSize="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                    </TextView>
-
-                    <TextView
-                        android:id="@+id/timeText"
-                        android:text="18 : 30 "
-                        android:textSize="15dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                    </TextView>
-                    <TextView
-                        android:id="@+id/bpmText"
-                        android:text="75 bpm"
-                        android:layout_marginTop="10dp"
-                        android:textSize="20dp"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                    </TextView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_marginTop="6dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/stableicon_on"
-                        android:id="@+id/statusImage">
-                    </ImageView>
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="570dp"
-            android:orientation="vertical">
-
-            <com.hadiidbouk.charts.ChartProgressBar
-                android:background="@drawable/icon_tab"
-                android:padding="10dp"
-                android:layout_marginTop="30dp"
-                android:id="@+id/ChartProgressBar"
-                android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_horizontal"
-                app:hdBarCanBeClick="true"
-                app:hdBarCanBeToggle="true"
-                app:hdBarHeight="200dp"
-                app:hdBarRadius="10dp"
-                app:hdBarTitleColor="@color/bar_title_color"
-                app:hdBarTitleMarginTop="9dp"
-                app:hdBarTitleSelectedColor="@color/bar_title_selected_color"
-                app:hdBarTitleTxtSize="14sp"
-                app:hdBarWidth="10dp"
-                app:hdEmptyColor="@color/empty"
-                app:hdMaxValue="120"
-                app:hdPinBackgroundColor="@color/pin_background"
-                app:hdPinDrawable="@drawable/ic_pin"
-                app:hdPinMarginBottom="45dp"
-                app:hdPinMarginEnd="22dp"
-                app:hdPinPaddingBottom="5dp"
-                app:hdPinTextColor="@color/pin_text"
-                app:hdPinTxtSize="15sp"
-                app:hdProgressClickColor="@color/progress_click"
-                app:hdProgressColor="@color/progress"
-                app:hdProgressDisableColor="@color/progress_disable" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_marginTop="40dp"
-                android:orientation="horizontal">
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:layout_width="150dp"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@android:drawable/btn_dropdown"
-                    android:spinnerMode="dropdown" />
-
-                <RadioGroup
+                android:layout_marginLeft="20dp"
+                android:orientation="vertical"
+                android:layout_width="100dp"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/dateText"
+                    android:text="2019 - 10- 08"
+                    android:textSize="13dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content">
+                </TextView>
 
-                    <RadioButton
-                        android:id="@+id/todayRadio"
-                        style="@style/RadioWithTextOnTop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="today"
-                        android:textSize="13dp"></RadioButton>
+                <TextView
+                    android:id="@+id/timeText"
+                    android:text="18 : 30 "
+                    android:textSize="12dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                </TextView>
 
-                    <RadioButton
-                        android:id="@+id/weekRadio"
-                        style="@style/RadioWithTextOnTop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="week"
-                        android:textSize="13dp"></RadioButton>
-
-                    <RadioButton
-                        android:id="@+id/monthRadio"
-                        style="@style/RadioWithTextOnTop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="month"
-                        android:textSize="13dp"></RadioButton>
-
-                </RadioGroup>
             </LinearLayout>
+            <TextView
+                android:layout_marginTop="15dp"
+                android:id="@+id/statusText"
+                android:layout_marginLeft="30dp"
+                android:text="EXCITE"
+                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
+            <TextView
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="30dp"
+                android:id="@+id/bpmText"
+                android:text="75 BPM"
+                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
+
+
         </LinearLayout>
-    </LinearLayout>
 
 
-</LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_below="@+id/current_layout"
+        android:id="@+id/spinner_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp">
+        <RelativeLayout
+            android:id="@+id/time_layout"
+            android:layout_width="140dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="3dp"
+            android:layout_weight=".28"
+            android:background="@drawable/spinner_border"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/time_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_horizontal"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:layout_marginLeft="5dp"
+                android:autofillHints="time"
+                android:spinnerMode="dropdown" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:src="@mipmap/drop" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/staus_layout"
+            android:layout_toRightOf="@+id/time_layout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginLeft="15dp"
+            android:layout_weight=".28"
+            android:background="@drawable/spinner_border"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/status_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:autofillHints="status"
+                android:layout_marginLeft="5dp"
+                android:spinnerMode="dropdown" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:src="@mipmap/drop" />
+
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/spinner_layout"
+        android:id="@+id/graph_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TableLayout
+            android:id="@+id/valuetable"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <TableRow
+                android:id="@+id/value">
+                <TextView
+                    android:id="@+id/max"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="50dp"
+                    android:text="MAX |"
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/max_v"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_width="50dp"
+                    android:text=""
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/avg"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="50dp"
+                    android:text="AVG |"
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/avg_v"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_width="50dp"
+                    android:text=""
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/min"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="MIN |"
+                    android:layout_width="50dp"
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/min_v"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_width="50dp"
+                    android:text=""
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+            </TableRow>
+        </TableLayout>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/linechart"
+            android:layout_width="350dp"
+            android:layout_height="380dp"
+            android:layout_below="@+id/valuetable"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="10dp">
+
+        </com.github.mikephil.charting.charts.LineChart>
+
+    </RelativeLayout>
+
+
+
+
+</RelativeLayout>
