--- a/app/src/main/res/layout/activity_heart.xml
+++ b/app/src/main/res/layout/activity_heart.xml
@@ -19,34 +19,24 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <Button
-                    android:background="@drawable/button"
-                    android:layout_gravity="center_horizontal"
-                    android:id="@+id/btnStart"
-                    android:layout_width="330dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:padding="3dp"
-                    android:text="START"
-                    android:typeface="normal" />
-
-
                 <TextView
+                    android:layout_marginTop="30dp"
                     android:textSize="18dp"
-                    android:layout_marginTop="10dp"
                     android:id="@+id/textMon"
-                    android:text="Please Finger over the camera sensor"
+                    android:textColor="@android:color/black"
+                    android:text="Please  your  Finger \n on a Back Camera and a Flush"
                     android:textAlignment="center"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp" />
+                    android:layout_height="65dp" />
                 <ImageView
                     android:id="@+id/fingerImage"
+                    android:layout_marginTop="10dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_width="130dp"
-                    android:layout_height="100dp"
+                    android:layout_width="200dp"
+                    android:layout_height="180dp"
                     android:src="@drawable/finger">
 
                 </ImageView>
@@ -71,11 +61,11 @@
 
             <LinearLayout
                 android:id="@+id/end_layout"
-                android:visibility="invisible"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="50dp"
                 android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -85,139 +75,183 @@
                         android:id="@+id/bpmText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
                         android:layout_marginTop="10dp"
                         android:text="BPM"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="18dp">
-                    </TextView>
+                        android:textSize="18dp"></TextView>
 
                     <SeekBar
-                        android:layout_below="@id/bpmText"
-                        android:layout_centerHorizontal="true"
                         android:id="@+id/bpmseekbar"
                         android:layout_width="340dp"
                         android:layout_height="wrap_content"
+                        android:layout_below="@id/bpmText"
+                        android:layout_centerHorizontal="true"
                         android:layout_marginTop="10dp"
                         android:max="120"
                         android:progress="40"
                         android:progressDrawable="@drawable/custom_seekbar"
-                        android:thumb="@drawable/custom_thumb"
-                        android:secondaryProgress="75" />
+                        android:secondaryProgress="75"
+                        android:thumb="@drawable/custom_thumb" />
 
                     <TextView
-                        android:layout_below="@id/bpmseekbar"
                         android:id="@+id/minBpmNum"
-                        android:layout_marginLeft="54dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_below="@id/bpmseekbar"
+                        android:layout_marginLeft="54dp"
                         android:text="@string/min_bpm">
 
                     </TextView>
 
                     <TextView
-                        android:layout_below="@id/bpmseekbar"
                         android:id="@+id/maxBpmNum"
-                        android:layout_marginLeft="330dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/max_bpm">
-                    </TextView>
+                        android:layout_below="@id/bpmseekbar"
+                        android:layout_marginLeft="330dp"
+                        android:text="@string/max_bpm"></TextView>
                 </RelativeLayout>
                 <!--select icon-->
                 <LinearLayout
-                    android:layout_marginTop="15dp"
+                    android:layout_width="330dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
-                    android:orientation="vertical" android:layout_width="330dp"
-                    android:layout_height="match_parent">
+                    android:layout_marginTop="15dp"
+                    android:orientation="vertical">
+
                     <TextView
-                        android:textSize="18dp"
-                        android:layout_gravity="center_horizontal"
+                        android:id="@+id/statusText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/statusText"
-                        android:text="Select Status">
-                    </TextView>
-                    <LinearLayout
-                        android:layout_marginTop="20dp"
                         android:layout_gravity="center_horizontal"
-                        android:background="@drawable/icon_tab"
-                        android:padding="10dp"
-                        android:orientation="horizontal"
+                        android:text="Select Status"
+                        android:textSize="18dp"></TextView>
+
+                    <LinearLayout
                         android:layout_width="330dp"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/icon_tab"
+                        android:orientation="horizontal"
+                        android:padding="10dp">
+
                         <RadioGroup
-                            android:orientation="horizontal"
                             android:id="@+id/statusIcons"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
                             <RadioButton
-                                android:textColor="@color/empty"
-                                android:text="Stable"
-                                android:layout_marginLeft="10dp"
                                 android:id="@+id/stableBtn"
-                                android:button="@color/empty"
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
-                                android:background="@drawable/icon_stable">
-                            </RadioButton>
-                            <RadioButton
-                                android:textColor="@color/empty"
-                                android:text="Excite"
                                 android:layout_marginLeft="10dp"
+                                android:background="@drawable/icon_stable"
+                                android:button="@color/empty"
+                                android:text="Stable"
+                                android:textColor="@color/empty"></RadioButton>
+
+                            <RadioButton
                                 android:id="@+id/exciteBtn"
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
-                                android:button="@color/empty"
-                                android:background="@drawable/icon_excite">
-                            </RadioButton>
-                            <RadioButton
-                                android:textColor="@color/empty"
-                                android:text="Run"
                                 android:layout_marginLeft="10dp"
+                                android:background="@drawable/icon_excite"
+                                android:button="@color/empty"
+                                android:text="Excite"
+                                android:textColor="@color/empty"></RadioButton>
+
+                            <RadioButton
                                 android:id="@+id/runningBtn"
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
-                                android:button="@color/empty"
-                                android:background="@drawable/icon_running">
-                            </RadioButton>
-                            <RadioButton
-                                android:textColor="@color/empty"
-                                android:text="Depres"
                                 android:layout_marginLeft="10dp"
+                                android:background="@drawable/icon_running"
+                                android:button="@color/empty"
+                                android:text="Run"
+                                android:textColor="@color/empty"></RadioButton>
+
+                            <RadioButton
                                 android:id="@+id/depressBtn"
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
-                                android:button="@color/empty"
-                                android:background="@drawable/icon_depress">
-                            </RadioButton>
-                            <RadioButton
-                                android:textColor="@color/empty"
-                                android:text="Sleep"
                                 android:layout_marginLeft="10dp"
+                                android:background="@drawable/icon_depress"
+                                android:button="@color/empty"
+                                android:text="Depres"
+                                android:textColor="@color/empty"></RadioButton>
+
+                            <RadioButton
                                 android:id="@+id/sleepBtn"
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
+                                android:layout_marginLeft="10dp"
+                                android:background="@drawable/icon_sleep"
                                 android:button="@color/empty"
-                                android:background="@drawable/icon_sleep">
-                            </RadioButton>
+                                android:text="Sleep"
+                                android:textColor="@color/empty"></RadioButton>
 
                         </RadioGroup>
                     </LinearLayout>
-
-
                 </LinearLayout>
-                <Button
-                    android:background="@drawable/button"
-                    android:layout_marginTop="40dp"
-                    android:id="@+id/storeBtn"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="330dp"
-                    android:text="store Heart Rate"
-                    android:layout_height="50dp">
 
-                </Button>
+
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_marginTop="60dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:background="@drawable/button"
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/btnStart"
+                    android:layout_width="330dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:padding="3dp"
+                    android:text="START"
+                    android:typeface="normal" />
+                <LinearLayout
+                    android:layout_marginTop="60dp"
+                    android:visibility="gone"
+                    android:id="@+id/btnLayout2"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="horizontal"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/againBtn"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/button"
+                        android:padding="3dp"
+                        android:text="again"
+                        android:typeface="normal" />
+
+                    <Button
+                        android:background="@drawable/button"
+                        android:layout_gravity="center_horizontal"
+                        android:id="@+id/storeBtn"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:padding="3dp"
+                        android:text="STORE"
+                        android:typeface="normal" />
+                </LinearLayout>
+
+
+
+            </LinearLayout>
 
 
 
