--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,9 +13,10 @@
         <item name="android:drawableBottom">?android:attr/listChoiceIndicatorSingle</item>
         <item name="android:gravity">center_horizontal|bottom</item>
     </style>
+    
+    <!-- Spinner theme. -->
     <style name="spinnerItemStyle" parent="android:Widget.TextView.SpinnerItem">
     </style>
-
     <style name="spinnerDropDownItemStyle" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
     </style>
 
